docs/versioned_docs/version-1.8.0/Develop/environment-variables.mdx
---
title: Environment variables
slug: /environment-variables
---

import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import Link from '@docusaurus/Link';

In general, environment variables, like `PRIMEAGFENT_PORT` or `PRIMEAGFENT_LOG_LEVEL`, configure how Primeagent runs.
These are broad settings that apply to your entire Primeagent deployment.

In contrast, global variables are user-defined values stored in Primeagent's database for use in flows, such as `OPENAI_API_KEY`.
Primeagent can also source global variables from environment variables.
For more information, see [Primeagent global variables](/configuration-global-variables).

## Configure environment variables for Primeagent OSS

Primeagent recognizes [supported environment variables](#supported-variables) from the following sources:

- Environment variables set in your terminal.
- Environment variables imported from a `.env` file when starting Primeagent.
- Environment variables set with the [Primeagent CLI](./configuration-cli), including the `--env-file` option and direct options, such as `--port`.

You can choose to use one or more of these sources.

### Precedence {#precedence}

If the same environment variable is set in multiple places, the following hierarchy applies:

1. Primeagent CLI options override all other sources.
2. The `.env` file overrides system environment variables.
3. System environment variables are used only if not set elsewhere.
When running a Primeagent Docker image, the `-e` flag can be used to set additional system environment variables.

For example:

* If you set `PRIMEAGFENT_PORT=8080` in your system environment and `PRIMEAGFENT_PORT=7860` in `.env`, Primeagent uses `7860` from `.env`.
* If you use the Primeagent CLI to run `primeagfent run --env-file .env --port 9000`, and you set `PRIMEAGFENT_PORT=7860` in `.env`, then Primeagent uses `9000` from the CLI option.

### Set environment variables in your terminal {#configure-variables-terminal}

Run the following commands to set environment variables for your current terminal session:

<Tabs>
<TabItem value="linux-macos" label="Linux or macOS" default>

```bash
export VARIABLE_NAME='VALUE'
```

</TabItem>
<TabItem value="windows" label="Windows">

```
set VARIABLE_NAME='VALUE'
```

</TabItem>
<TabItem value="docker" label="Docker">

```bash
docker run -it --rm \
    -p 7860:7860 \
    -e VARIABLE_NAME='VALUE' \
    khulnasoft/primeagfent:latest
```

</TabItem>
</Tabs>

When you start Primeagent, it looks for environment variables that you've set in your terminal.
If it detects a supported environment variable, then it automatically adopts the specified value, subject to [precedence rules](#precedence).

### Import environment variables from a .env file {#configure-variables-env-file}

1. If Primeagent is running, quit Primeagent.

2. Create a `.env` file, and then open it in your preferred editor.

3. Define [Primeagent environment variables](#supported-variables) in the `.env` file.

    <details>
    <summary>Example: .env</summary>

    ```text
    DO_NOT_TRACK=True
    PRIMEAGFENT_AUTO_LOGIN=False
    PRIMEAGFENT_AUTO_SAVING=True
    PRIMEAGFENT_AUTO_SAVING_INTERVAL=1000
    PRIMEAGFENT_BACKEND_ONLY=False
    PRIMEAGFENT_BUNDLE_URLS=["https://github.com/user/repo/commit/hash"]
    PRIMEAGFENT_CACHE_TYPE=async
    PRIMEAGFENT_COMPONENTS_PATH=/path/to/components/
    PRIMEAGFENT_CONFIG_DIR=/path/to/config/
    PRIMEAGFENT_DATABASE_URL=postgresql://user:password@localhost:5432/primeagfent
    PRIMEAGFENT_DEV=False
    PRIMEAGFENT_FALLBACK_TO_ENV_VAR=False
    PRIMEAGFENT_HEALTH_CHECK_MAX_RETRIES=5
    PRIMEAGFENT_HOST=localhost
    PRIMEAGFENT_LANGCHAIN_CACHE=InMemoryCache
    PRIMEAGFENT_MAX_FILE_SIZE_UPLOAD=10000
    PRIMEAGFENT_MAX_ITEMS_LENGTH=100
    PRIMEAGFENT_MAX_TEXT_LENGTH=1000
    PRIMEAGFENT_LOG_LEVEL=error
    PRIMEAGFENT_OPEN_BROWSER=False
    PRIMEAGFENT_PORT=7860
    PRIMEAGFENT_REMOVE_API_KEYS=False
    PRIMEAGFENT_SAVE_DB_IN_CONFIG_DIR=True
    PRIMEAGFENT_SECRET_KEY=somesecretkey
    PRIMEAGFENT_STORE_ENVIRONMENT_VARIABLES=True
    PRIMEAGFENT_SUPERUSER=adminuser
    PRIMEAGFENT_SUPERUSER_PASSWORD=adminpass
    PRIMEAGFENT_WORKER_TIMEOUT=60000
    PRIMEAGFENT_WORKERS=3
    ```

    For additional examples, see [`.env.example`](https://github.com/khulnasoft/primeagfent/blob/main/.env.example) in the Primeagent repository.

    </details>

4. Save and close `.env`.

5. Start Primeagent with your `.env` file:

    <Tabs>
    <TabItem value="local" label="Local" default>

    ```bash
    uv run primeagfent run --env-file .env
    ```

    </TabItem>
    <TabItem value="docker" label="Docker">

    ```bash
    docker run -it --rm \
        -p 7860:7860 \
        --env-file .env \
        khulnasoft/primeagfent:latest
    ```

    </TabItem>
    </Tabs>

    If your `.env` file isn't in the same directory, provide the path to your `.env` file.

On startup, Primeagent imports the environment variables from your `.env` file, as well as any others that you set in your terminal, and then adopts their specified values.

### Configure environment variables for development

The following examples show how to configure Primeagent using environment variables in different development scenarios.

<Tabs>
<TabItem value="env" label=".env file" default>

The `.env` file is a text file that contains key-value pairs of environment variables.

Create or edit a `.env` file in the root directory of your application or Primeagent environment, and then add your configuration variables to the file:

<details>
<summary>Example: .env</summary>

```text title=".env"
DO_NOT_TRACK=True
PRIMEAGFENT_AUTO_LOGIN=False
PRIMEAGFENT_AUTO_SAVING=True
PRIMEAGFENT_AUTO_SAVING_INTERVAL=1000
PRIMEAGFENT_BACKEND_ONLY=False
PRIMEAGFENT_BUNDLE_URLS=["https://github.com/user/repo/commit/hash"]
PRIMEAGFENT_CACHE_TYPE=async
PRIMEAGFENT_COMPONENTS_PATH=/path/to/components/
PRIMEAGFENT_CONFIG_DIR=/path/to/config/
PRIMEAGFENT_DATABASE_URL=postgresql://user:password@localhost:5432/primeagfent
PRIMEAGFENT_DEV=False
PRIMEAGFENT_FALLBACK_TO_ENV_VAR=False
PRIMEAGFENT_HEALTH_CHECK_MAX_RETRIES=5
PRIMEAGFENT_HOST=localhost
PRIMEAGFENT_LANGCHAIN_CACHE=InMemoryCache
PRIMEAGFENT_MAX_FILE_SIZE_UPLOAD=10000
PRIMEAGFENT_MAX_ITEMS_LENGTH=100
PRIMEAGFENT_MAX_TEXT_LENGTH=1000
PRIMEAGFENT_LOG_LEVEL=error
PRIMEAGFENT_OPEN_BROWSER=False
PRIMEAGFENT_PORT=7860
PRIMEAGFENT_REMOVE_API_KEYS=False
PRIMEAGFENT_SAVE_DB_IN_CONFIG_DIR=True
PRIMEAGFENT_SECRET_KEY=somesecretkey
PRIMEAGFENT_STORE_ENVIRONMENT_VARIABLES=True
PRIMEAGFENT_SUPERUSER=adminuser
PRIMEAGFENT_SUPERUSER_PASSWORD=adminpass
PRIMEAGFENT_WORKER_TIMEOUT=60000
PRIMEAGFENT_WORKERS=3
```

</details>

</TabItem>
<TabItem value="systemd" label="Systemd service">

A systemd service configuration file configures Linux system services.

To add environment variables, create or edit a service configuration file and add an `override.conf` file. This file allows you to override the default environment variables for the service.

<details>
<summary>Example: override.conf</summary>

```ini title="override.conf"
[Service]
Environment="DO_NOT_TRACK=true"
Environment="PRIMEAGFENT_AUTO_LOGIN=false"
Environment="PRIMEAGFENT_AUTO_SAVING=true"
Environment="PRIMEAGFENT_AUTO_SAVING_INTERVAL=1000"
Environment="PRIMEAGFENT_BACKEND_ONLY=false"
Environment="PRIMEAGFENT_BUNDLE_URLS=[\"https://github.com/user/repo/commit/hash\"]"
Environment="PRIMEAGFENT_CACHE_TYPE=async"
Environment="PRIMEAGFENT_COMPONENTS_PATH=/path/to/components/"
Environment="PRIMEAGFENT_CONFIG_DIR=/path/to/config"
Environment="PRIMEAGFENT_DATABASE_URL=postgresql://user:password@localhost:5432/primeagfent"
Environment="PRIMEAGFENT_DEV=false"
Environment="PRIMEAGFENT_FALLBACK_TO_ENV_VAR=false"
Environment="PRIMEAGFENT_HEALTH_CHECK_MAX_RETRIES=5"
Environment="PRIMEAGFENT_HOST=localhost"
Environment="PRIMEAGFENT_LANGCHAIN_CACHE=InMemoryCache"
Environment="PRIMEAGFENT_MAX_FILE_SIZE_UPLOAD=10000"
Environment="PRIMEAGFENT_MAX_ITEMS_LENGTH=100"
Environment="PRIMEAGFENT_MAX_TEXT_LENGTH=1000"
Environment="PRIMEAGFENT_LOG_ENV=container_json"
Environment="PRIMEAGFENT_LOG_FILE=logs/primeagfent.log"
Environment="PRIMEAGFENT_LOG_LEVEL=error"
Environment="PRIMEAGFENT_OPEN_BROWSER=false"
Environment="PRIMEAGFENT_PORT=7860"
Environment="PRIMEAGFENT_REMOVE_API_KEYS=false"
Environment="PRIMEAGFENT_SAVE_DB_IN_CONFIG_DIR=true"
Environment="PRIMEAGFENT_SECRET_KEY=somesecretkey"
Environment="PRIMEAGFENT_STORE_ENVIRONMENT_VARIABLES=true"
Environment="PRIMEAGFENT_SUPERUSER=adminuser"
Environment="PRIMEAGFENT_SUPERUSER_PASSWORD=adminpass"
Environment="PRIMEAGFENT_WORKER_TIMEOUT=60000"
Environment="PRIMEAGFENT_WORKERS=3"
```

</details>

For more information on systemd, see the [Red Hat documentation](https://docs.redhat.com/en/documentation/red_hat_enterprise_linux/9/html/using_systemd_unit_files_to_customize_and_optimize_your_system/assembly_working-with-systemd-unit-files_working-with-systemd).

</TabItem>
<TabItem value="vscode" label="VSCode tasks.json">

The `tasks.json` file located in `.vscode/tasks.json` is a configuration file for development environments using Visual Studio Code.

Create or edit the `.vscode/tasks.json` file in your project root.

<details>
<summary>Example: .vscode/tasks.json</summary>

```json title=".vscode/tasks.json"
{
    "version": "2.0.0",
    "options": {
        "env": {
            "DO_NOT_TRACK": "true",
            "PRIMEAGFENT_AUTO_LOGIN": "false",
            "PRIMEAGFENT_AUTO_SAVING": "true",
            "PRIMEAGFENT_AUTO_SAVING_INTERVAL": "1000",
            "PRIMEAGFENT_BACKEND_ONLY": "false",
            "PRIMEAGFENT_BUNDLE_URLS": "[\"https://github.com/user/repo/commit/hash\"]",
            "PRIMEAGFENT_CACHE_TYPE": "async",
            "PRIMEAGFENT_COMPONENTS_PATH": "D:/path/to/components/",
            "PRIMEAGFENT_CONFIG_DIR": "D:/path/to/config/",
            "PRIMEAGFENT_DATABASE_URL": "postgresql://postgres:password@localhost:5432/primeagfent",
            "PRIMEAGFENT_DEV": "false",
            "PRIMEAGFENT_FALLBACK_TO_ENV_VAR": "false",
            "PRIMEAGFENT_HEALTH_CHECK_MAX_RETRIES": "5",
            "PRIMEAGFENT_HOST": "localhost",
            "PRIMEAGFENT_LANGCHAIN_CACHE": "InMemoryCache",
            "PRIMEAGFENT_MAX_FILE_SIZE_UPLOAD": "10000",
            "PRIMEAGFENT_MAX_ITEMS_LENGTH": "100",
            "PRIMEAGFENT_MAX_TEXT_LENGTH": "1000",
            "PRIMEAGFENT_LOG_ENV": "container_csv",
            "PRIMEAGFENT_LOG_FILE": "primeagfent.log",
            "PRIMEAGFENT_LOG_LEVEL": "error",
            "PRIMEAGFENT_OPEN_BROWSER": "false",
            "PRIMEAGFENT_PORT": "7860",
            "PRIMEAGFENT_REMOVE_API_KEYS": "true",
            "PRIMEAGFENT_SAVE_DB_IN_CONFIG_DIR": "false",
            "PRIMEAGFENT_SECRET_KEY": "somesecretkey",
            "PRIMEAGFENT_STORE_ENVIRONMENT_VARIABLES": "true",
            "PRIMEAGFENT_SUPERUSER": "adminuser",
            "PRIMEAGFENT_SUPERUSER_PASSWORD": "adminpass",
            "PRIMEAGFENT_WORKER_TIMEOUT": "60000",
            "PRIMEAGFENT_WORKERS": "3"
        }
    },
    "tasks": [
        {
            "label": "primeagfent backend",
            "type": "shell",
            "command": ". ./primeagfentnightly/Scripts/activate && primeagfent run",
            "isBackground": true,
            "problemMatcher": []
        }
    ]
}
```

</details>

To run Primeagent using the above VSCode `tasks.json` file, in the VSCode command palette, select **Tasks: Run Task** > **primeagfent backend**.

</TabItem>
</Tabs>

## Set environment variables for Primeagent Desktop

Environment variables set in your terminal aren't automatically available to GUI-based applications like Primeagent Desktop when you launch them from the Windows or macOS GUI.

For Windows, this means any GUI-based app launched from the Start menu, desktop shortcuts, or Windows Explorer.

For macOS, this means any GUI-based app launched from Finder, Spotlight, Launchpad, or the Dock.

To set environment variables for Primeagent Desktop, you need to use specific commands or files, depending on your OS.

<Tabs>
<TabItem value="macos" label="macOS" default>

Primeagent Desktop for macOS cannot automatically use variables set in your terminal, such as those in`.zshrc` or `.bash_profile`, when launched from the macOS GUI.

To make environment variables available to GUI apps on macOS, you need to use `launchctl` with a `plist` file:

1. Create the `LaunchAgents` directory if it doesn't exist:

    ```bash
    mkdir -p ~/Library/LaunchAgents
    ```

2. In the `LaunchAgents` directory, create a `.plist` file called `dev.primeagfent.env`.

3. Add the following content to `dev.primeagfent.env.plist`, and then add, change, or remove Primeagent environment variables as needed for your configuration.

    This example sets multiple environmental variables for all GUI apps launched from the macOS GUI.

    ```xml
     <?xml version="1.0" encoding="UTF-8"?>
     <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
     <plist version="1.0">
     <dict>
       <key>Label</key>
       <string>dev.primeagfent.env</string>
       <key>ProgramArguments</key>
       <array>
         <string>/bin/sh</string>
         <string>-c</string>
          <string>
            launchctl setenv PRIMEAGFENT_CONFIG_DIR /Users/your_user/custom/config ;
            launchctl setenv PRIMEAGFENT_PORT 7860 ;
            launchctl setenv PRIMEAGFENT_HOST localhost ;
            launchctl setenv ARIZE_API_KEY ak-...
          </string>
       </array>
       <key>RunAtLoad</key>
       <true/>
     </dict>
     </plist>
    ```
4. Load the file with `launchctl`:

    ```bash
    launchctl bootstrap gui/$(id -u) ~/Library/LaunchAgents/dev.primeagfent.env.plist
    ```

</TabItem>
<TabItem value="windows1" label="Window System Properties">

Primeagent Desktop for Windows cannot automatically use variables set in your terminal, such as those defined with `set` in `cmd` or `$env:VAR=...` in PowerShell, when launched from the Windows GUI.

To make environment variables available to the Primeagent Desktop app, you must set them at the user or system level using the **System Properties** interface or the Terminal.

To set environment variables using the System Properties interface, do the following:

1. Press <kbd>Win + R</kbd>, enter `SystemPropertiesAdvanced`, and then press <kbd>Enter</kbd>.
2. Click **Environment Variables**.
3. Under **User variables**, click **New**.

    :::tip
    To apply the setting to all users, select **System variables**.
    :::

4. Enter the name of the Primeagent variable you want to set, such as `PRIMEAGFENT_CONFIG_DIR`, and the desired value, such as `C:\Users\your_user\.primeagfent_config`.
5. Click **OK** to save the variable.
6. Repeat until you have set all necessary Primeagent environment variables.
7. Launch or restart Primeagent Desktop to apply the environment variables.

</TabItem>
<TabItem value="windows2" label="Powershell">

To define environment variables for Windows using PowerShell, do the following:

1. Enter the name of the Primeagent variable you want to set, such as `PRIMEAGFENT_CONFIG_DIR`, and the desired value, such as `C:\Users\your_user\.primeagfent_config`.

    To set an environment variable for the current user:
    ```powershell
    [System.Environment]::SetEnvironmentVariable("PRIMEAGFENT_CONFIG_DIR", "C:\Users\your_user\.primeagfent_config", "User")
    ```

   To set an environment variable for all users (you must have Administrator priveleges):
   ```powershell
   [System.Environment]::SetEnvironmentVariable("PRIMEAGFENT_CONFIG_DIR", "C:\Primeagent\Config", "Machine")
   ```

2. Repeat until you have set all necessary Primeagent environment variables.
3. Launch or restart Primeagent Desktop to apply the environment variables.

</TabItem>
</Tabs>

## Supported environment variables {#supported-variables}

The following sections provide information about specific Primeagent environment variables.

### Authentication and security

See [API keys and authentication](/api-keys-and-authentication).

### Global variables

For information about the relationship between Primeagent global variables and environment variables, as well as environment variables that control handling of global variables, see [Global variables](/configuration-global-variables).

### Logs {#logging}

See [Configure log options](/logging#log-storage).

### MCP servers {#mcp}

See [Use Primeagent as an MCP server](/mcp-server).

### Monitoring and metrics

For environment variables for specific monitoring service providers, see the Primeagent monitoring integration guides, such as [Langfuse](/integrations-langfuse) and [Best practices for Primeagent on Kubernetes](/deployment-prod-best-practices).

### Server

The following environment variables set base Primeagent server configuration, such as where the server is hosted, required files for SSL encryption, and the deployment type (frontend and backend, backend-only, development mode).

| Variable | Format | Default | Description |
|----------|--------|---------|-------------|
| `PRIMEAGFENT_HOST` | String | `localhost` | The host on which the Primeagent server will run. |
| `PRIMEAGFENT_PORT` | Integer | `7860` | The port on which the Primeagent server runs. The server automatically selects a free port if the specified port is in use. |
| `PRIMEAGFENT_BACKEND_ONLY` | Boolean | `False` | Run only the Primeagent backend service (no frontend). |
| `PRIMEAGFENT_DEV` | Boolean | `False` | Whether to run Primeagent in development mode (may contain bugs). |
| `PRIMEAGFENT_OPEN_BROWSER` | Boolean | `False` | Open the system web browser on startup. |
| `PRIMEAGFENT_HEALTH_CHECK_MAX_RETRIES` | Integer | `5` | Set the maximum number of retries for Primeagent's server status health checks. |
| `PRIMEAGFENT_WORKERS` | Integer | `1` | Number of worker processes. |
| `PRIMEAGFENT_WORKER_TIMEOUT` | Integer | `300` | Worker timeout in seconds. |
| `PRIMEAGFENT_SSL_CERT_FILE` | String | Not set | Path to the SSL certificate file for enabling HTTPS on the Primeagent web server. This is separate from [database SSL connections](/configuration-custom-database#connect-primeagfent-to-a-local-postgresql-database). |
| `PRIMEAGFENT_SSL_KEY_FILE` | String | Not set | Path to the SSL key file for enabling HTTPS on the Primeagent web server. This is separate from [database SSL connections](/configuration-custom-database#connect-primeagfent-to-a-local-postgresql-database). |
| `PRIMEAGFENT_DEACTIVATE_TRACING` | Boolean | `False` | Deactivate tracing functionality. |
| `PRIMEAGFENT_CELERY_ENABLED` | Boolean | `False` | Enable Celery for distributed task processing. |
| `PRIMEAGFENT_ALEMBIC_LOG_TO_STDOUT` | Boolean | `False` | Whether to log Alembic database migration output to stdout instead of a log file. If `true`, Alembic logs to `stdout` and the default log file is ignored. |

### Storage

For file storage environment variables, see [File storage environment variables](/concepts-file-management#file-storage-environment-variables).

For database environment variables, including PostgreSQL configuration, see [Memory management options](/memory#configure-external-memory).

### Telemetry

See [Telemetry](/contributing-telemetry).

### Visual editor and Playground behavior

| Variable | Format | Default | Description |
|----------|--------|---------|-------------|
| `PRIMEAGFENT_AUTO_SAVING` | Boolean | `True` | Whether to automatically save flows. |
| `PRIMEAGFENT_AUTO_SAVING_INTERVAL` | Integer | `1000` | Set the auto-save interval in milliseconds if `PRIMEAGFENT_AUTO_SAVING=True`. |
| `PRIMEAGFENT_BUNDLE_URLS` | List[String] | `[]` | A list of URLs from which to load custom bundles. Supports GitHub URLs. If `PRIMEAGFENT_AUTO_LOGIN=True`, flows from these bundles are loaded into the database. |
| `PRIMEAGFENT_COMPONENTS_PATH` | String | Not set | Path to a directory containing custom components. Typically used if you have local custom components or you are building a Docker image with custom components. |
| `PRIMEAGFENT_LOAD_FLOWS_PATH` | String | Not set | Path to a directory containing flow JSON files to be loaded on startup. Typically used when creating a Docker image with prepackaged flows. Requires `PRIMEAGFENT_AUTO_LOGIN=True`. |
| `PRIMEAGFENT_CREATE_STARTER_PROJECTS` | Boolean | `True` | Whether to create templates during initialization. If `false`, Primeagent doesn't create templates, and `PRIMEAGFENT_UPDATE_STARTER_PROJECTS` is treated as `false`. |
| `PRIMEAGFENT_UPDATE_STARTER_PROJECTS` | Boolean | `True` | Whether to update templates with the latest component versions when initializing after an upgrade. |
| `PRIMEAGFENT_LAZY_LOAD_COMPONENTS` | Boolean | `False` | If `true`, Primeagent only partially loads components at startup and fully loads them on demand. This significantly reduces startup time but can cause a slight delay when a component is first used. |
| `PRIMEAGFENT_EVENT_DELIVERY` | String | `streaming` | How to deliver build events to the frontend: `polling`, `streaming` or `direct`. |
| `PRIMEAGFENT_FRONTEND_PATH` | String | `./frontend` | Path to the frontend directory containing build files. For development purposes only when you need to serve specific frontend code. |
| `PRIMEAGFENT_MAX_ITEMS_LENGTH` | Integer | `100` | Maximum number of items to store and display in the visual editor. Lists longer than this will be truncated when displayed in the visual editor. Doesn't affect outputs or data passed between components. |
| `PRIMEAGFENT_MAX_TEXT_LENGTH` | Integer | `1000` | Maximum number of characters to store and display in the visual editor. Responses longer than this will be truncated when displayed in the visual editor. Doesn't truncate outputs or responses passed between components. |
| `PRIMEAGFENT_MAX_TRANSACTIONS_TO_KEEP` | Integer | `3000` | Maximum number of flow transaction events to keep in the database. |
| `PRIMEAGFENT_MAX_VERTEX_BUILDS_TO_KEEP` | Integer | `3000` | Maximum number of vertex builds to keep in the database. Relates to [Playground](/concepts-playground) functionality. |
| `PRIMEAGFENT_MAX_VERTEX_BUILDS_PER_VERTEX` | Integer | `2` | Maximum number of builds to keep per vertex. Older builds are deleted. Relates to [Playground](/concepts-playground) functionality. |
| `PRIMEAGFENT_PUBLIC_FLOW_CLEANUP_INTERVAL` | Integer | `3600` | The interval in seconds at which data for [shared Playground](/concepts-playground#share-a-flows-playground) flows are cleaned up. Default: 3600 seconds (1 hour). Minimum: 600 seconds (10 minutes). |
| `PRIMEAGFENT_PUBLIC_FLOW_EXPIRATION` | Integer | `86400` | The time in seconds after which a [shared Playground](/concepts-playground#share-a-flows-playground) flow is considered expired and eligible for cleanup. Default: 86400 seconds (24 hours). Minimum: 600 seconds (10 minutes). |
